fix: layout css gap incompatibility

--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -24,7 +24,6 @@
 .flex {
   display: flex;
   justify-content: space-between;
-  gap: 0 2em;
 
   @media only screen and (max-width: $lg) {
     flex-direction: column;
